# LBM_solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lbm_post_processor.cpp  lbm_solver.cpp  main.cpp
include/: lbm_constants.h  lbm_gpu.cuh  lbm_types.h
scripts/airfoil_generator/: .gitignore  airfoil_experiment.py
scripts/analysis/: analyze.ipynb
src/: colors.cpp  colors.h  data_compressor.cpp  data_compressor.hpp  lbm_gpu.cu  lbm_helpers.cu  lbm_helpers.cuh
